@@ -1,7 +1,7 @@
 Package: fuzzyreg
 Title: Fuzzy Linear Regression
-Version: 0.5.2
-Date: 2021-11-08
+Version: 0.6
+Date: 2022-03-02
 Authors@R: c(person(given = "Pavel", family = "Skrabanek", email = "pavel.skrabanek@vut.cz", 
     role = c("aut", "cph")), 
     person(given = "Natalia", family = "Martinkova", email = "martinkova@ivb.cz", 
@@ -19,6 +19,7 @@ Description: Estimators for fuzzy linear regression. The functions estimate para
 	Hung & Yang (2006) <doi:10.1016/j.fss.2006.08.004>,
 	Lee & Tanaka (1999) <doi:10.15807/jorsj.42.98>,
 	Nasrabadi, Nasrabadi & Nasrabady (2005) <doi:10.1016/j.amc.2004.02.008>,
+	Skrabanek, Marek & Pozdilkova (2021) <doi:10.3390/math9060685>,
 	Tanaka, Hayashi & Watada (1989) <doi:10.1016/0377-2217(89)90431-1>,
 	Zeng, Feng & Li (2017) <doi:10.1016/j.asoc.2016.09.029>.
 Depends: R (>= 3.4.0),
@@ -30,6 +31,6 @@ RoxygenNote: 7.1.2
 Suggests: testthat, FuzzyNumbers
 BuildVignettes: true
 NeedsCompilation: no
-Packaged: 2021-11-10 14:28:46 UTC; martinkova
+Packaged: 2022-03-02 13:35:42 UTC; martinkova
 Repository: CRAN
-Date/Publication: 2021-11-11 15:00:02 UTC
+Date/Publication: 2022-03-02 15:30:02 UTC
