@@ -1,18 +1,19 @@
-bcb149df756b93364cfc1daccb6c76c5 *DESCRIPTION
-38a7100b57f78c224d6daa26bc0b4de7 *NAMESPACE
-cce10e98d5afbdc670322e382acb477d *NEWS
+caed9f1ea00732852f2a858d80ad47af *DESCRIPTION
+5aab77dc7a9d220bffd1676fdbc61a89 *NAMESPACE
+220fa6ac4dcecf8f5edf5280a07545e0 *NEWS
 697fc182c1adbaf6d4f76adc5cc8a672 *R/GOF.R
 45a81962f5b6478a87a27010f13ddcdb *R/TEF.r
+9f6193350011a7805e9558065396681f *R/bfrl.r
 fa5bf85be930db2f26ce548addfc9d6c *R/coef.fuzzylm.R
 bfa39c6adea22e2f67d748b4a9798afd *R/data.R
 ea95e2b5e10a31b93129492ec520d451 *R/dom.r
 8a42fb35aea17314d6241aa709151804 *R/flar.R
 a33a0b240cdecf812bd17816f306d74e *R/fls.R
 52b4d7eded4d21ec6bb5656edffdcce0 *R/fuzzify.R
-cc3d391c309b3aa6d8725005b28efe4f *R/fuzzylm.R
+0e48017e836b9db3d189429bae9a549e *R/fuzzylm.R
 96dfba8b81adf1ebbfe6f9bd7d576cc2 *R/moflr.R
 e17ec9fa8c22e818ca2b4e989c05e50b *R/oplr.R
-1598fd7cf5cde97cba09e119ec6ff37e *R/plot.fuzzylm.R
+b0f6ffbcc1004dfa515bfe3c3893b0a0 *R/plot.fuzzylm.R
 39f12cb2e6db21768145a148921d7c62 *R/plr.R
 4180942948d3af8ae8e4ffbc0366e6f7 *R/plrls.R
 ce59c838f46990a09db9a186c2bda40c *R/predict.fuzzylm.R
@@ -28,20 +29,21 @@ b2e57ba8847303ad58df36dd98db7884 *data/bats.rda
 3241d874781fdc1fcf817a6273c4d9c3 *inst/CITATION
 c18a76dbce87469ecaaf59e34a207fb0 *inst/doc/GettingStarted.R
 27037f4f55428115a94d54cafe567328 *inst/doc/GettingStarted.Rnw
-1719c51580ee117991376ef1d5432997 *inst/doc/GettingStarted.pdf
+853042dabbd11dd685c98421759985b0 *inst/doc/GettingStarted.pdf
 9f34a41c22aa2d7cc8f4ace812a63b23 *man/GOF.Rd
 00fd803a51d00a0467a621c8ff616f05 *man/TEF.Rd
 7a487e91debcfb31389d7ba6edddf7a9 *man/bats.Rd
+bf39b4ab938b9e32699f9408f256e461 *man/bfrl.Rd
 c6e890d051b8889f174f4c559ab30d9b *man/coef.fuzzylm.Rd
 6dd8e7337fe9c3160638203e656cbbae *man/dom.Rd
 8d3fb785a0ec91aeba67a4651df28dd9 *man/flar.Rd
 658d0cd3e72fa916c1b85a2758c1e54f *man/fls.Rd
 028b573da6d144a089f482d345894ae2 *man/fuzzify.Rd
 d8edaa6f14215c97b5931ba9dc46b4fd *man/fuzzydat.Rd
-b5c53c8afad94d0acfee2a6123eb9f15 *man/fuzzylm.Rd
+45ae13f9784ba4d4d3bb7cd384b4ac90 *man/fuzzylm.Rd
 eb88314a3dcf7de88a3edfa803e1af00 *man/moflr.Rd
 047d85c04914e10147c5f0a253d3dc0c *man/oplr.Rd
-1cee1134b7b725713dd67484646e69ad *man/plot.fuzzylm.Rd
+7f4c51f03a3a601ebbb4f0b9402524f0 *man/plot.fuzzylm.Rd
 d5305dd84b2b2f41e74e72f8bba35af8 *man/plr.Rd
 93a3571a3161ce5f854536ab9d742af2 *man/plrls.Rd
 b22af25596fa6008d11f01131fd29857 *man/predict.fuzzylm.Rd
@@ -52,7 +54,7 @@ eed10cfdfe492eb9925a5c5a18b61f1a *man/print.summary.fuzzylm.Rd
 91bf9a3cd3e9a4dd06df86df9cc2a14d *man/sumFuzzy.Rd
 b14c58fbf245c2b3c063048fe45cc645 *man/summary.fuzzylm.Rd
 0c30f50dacc89ebd3b360a2f1daf1748 *tests/testthat.R
-491dbe32cf5949dac357c5711c5d96da *tests/testthat/test_correctSolution.R
-68cedb243379a4f598c7feb88b72f57a *tests/testthat/test_performance.R
+d1d7ed0a16b057c9cd451faae5af7abf *tests/testthat/test_correctSolution.R
+4d5319cbfa913e11fe316820fdb55646 *tests/testthat/test_performance.R
 27037f4f55428115a94d54cafe567328 *vignettes/GettingStarted.Rnw
 735423828d356e00f944f515c4dedc2f *vignettes/references.bib
