@@ -8,6 +8,7 @@ S3method(print,summary.fuzzylm)
 S3method(summary,fuzzylm)
 export(GOF)
 export(TEF)
+export(bfrl)
 export(dom)
 export(flar)
 export(fls)
